--- a/05_DOCKER_COMPOSE_DEPLOY/FN/.env
+++ b/05_DOCKER_COMPOSE_DEPLOY/FN/.env
@@ -1,5 +1,5 @@
 
-REACT_APP_API_URL=http://localhost:8090
-# REACT_APP_API_URL=http://54.180.61.161:8090
+# REACT_APP_API_URL=http://localhost:8090
+REACT_APP_API_URL=http://54.180.61.161:8090
 
 # REACT_APP_API_URL=http://bn-container:8090
